Refine @startuml and @plantuml